--- a/Icyalubaniya.mw
+++ b/Icyalubaniya.mw
@@ -2,11 +2,23 @@
 
 '''Icyalubaniya''' cyangwa '''Ikinyalubaniya''' (izina mu cyalubaniya : ''Shqip''  cyangwa ''gjuha shqipe'' ) ni [[ururimi]] rwa [[Alubaniya]] na [[Kosovo]].
 
-== Alfabeti y’ikinyaturukiya ==
-Ikinyaturukiya kigizwe n’inyuguti 36 : a b c ç d dh e ë f g gj h i j k l ll m n nj o p q r rr s sh t th u v x xh y z zh
+== Alfabeti y’Icyalubaniya ==
+Icyalubaniya kigizwe n’inyuguti 36 : a b c ç d dh e ë f g gj h i j k l ll m n nj o p q r rr s sh t th u v x xh y z zh
 :inyajwi 6 : a e ë i o u 
 :indagi 30 : b c ç d dh f g gj h j k l ll m n nj p q r rr s sh t th v x xh y z zh
 
+<center>
+{|class="wikitable" style="border-collapse:collapse;"
+|-
+|bgcolor="#EFEFEF" align="center" colspan="36" | 
+|-
+|width=3% align="center"|[[A]]||width=3% align="center"|[[B]]||width=3% align="center"|[[C]]||width=3% align="center"|[[Ç]]||width=3% align="center"|[[D]]||width=3% align="center"|[[Dh]]||width=3% align="center"|[[E]]||width=3% align="center"|[[Ë]]||width=3% align="center"|[[F]]||width=3% align="center"|[[G]]||width=3% align="center"|[[Gj]]||width=3% align="center"|[[H]]||width=3% align="center"|[[I]]||width=3% align="center"|[[J]]||width=3% align="center"|[[K]]||width=3% align="center"|[[L]]||width=3% align="center"|[[Ll]]||width=3% align="center"|[[M]]||width=3% align="center"|[[N]]||width=3% align="center"|[[Nj]]||width=3% align="center"|[[O]]||width=3% align="center"|[[P]]||width=3% align="center"|[[R]]||width=3% align="center"|[[Rr]]||width=3% align="center"|[[S]]||width=3% align="center"|[[Sh]]||width=3% align="center"|[[T]]||width=3% align="center"|[[Th]]||width=3% align="center"|[[U]]||width=3% align="center"|[[V]]||width=3% align="center"|[[X]]||width=3% align="center"|[[Xh]]||width=3% align="center"|[[Y]]||width=3% align="center"|[[Z]]||width=3% align="center"|[[Zh]]
+|-
+|bgcolor="#EFEFEF" align="center" colspan="36" | 
+|-
+|align="center"|a||align="center"|b||align="center"|c||align="center"|ç||align="center"|d||align="center"|dh||align="center"|e||align="center"|ë||align="center"|f||align="center"|g||align="center"|gj||align="center"|h||align="center"|i||align="center"|j||align="center"|k||align="center"|l||align="center"|ll||align="center"|m||align="center"|n||align="center"|nj||align="center"|o||align="center"|p||align="center"|r||align="center"|rr||align="center"|s||align="center"|sh||align="center"|t||align="center"|th||align="center"|u||align="center"|v||align="center"|x||align="center"|xh||align="center"|y||align="center"|z||align="center"|zh
+|}
+</center>
 
 [[Category:Indimi z’igihinde-buraya]]
 
