*Empty MediaWiki Message*

--- a/Icyabukaziyani.mw
+++ b/Icyabukaziyani.mw
@@ -1,4 +1,4 @@
-'''Abukaziyani''' (izina mu abukaziyani: ''аҧсуа бызшәа'' cyangwa ''аҧсшәа'') ni [[ururimi]] rwa [[Abukaziya]]. 
+'''Abukaziyani''' (izina mu abukaziyani: ''аҧсуа бызшәа'' cyangwa ''аҧсшәа'') ni [[ururimi]] rwa [[Abukaziya]] na [[Turukiya]]. 
 
 == umugereka – ubuke ==
 -қәа
