--- a/Cekiya.mw
+++ b/Cekiya.mw
@@ -1,7 +1,7 @@
 [[File:EU-Czechia.svg|thumb|Cekiya]]
 [[File:Flag of the Czech Republic.svg|right|thumb|150px|Cekiya]]
 
-'''Cekiya''' (izina mu [[giceke]] : ''Shqipëria'' cyangwa ''Republika e Shqipërisë'') n’[[igihugu]] muri [[Uburayi]].
+'''Cekiya''' (izina mu [[giceke]] : ''Česko'' cyangwa ''Česká republika'') n’[[igihugu]] muri [[Uburayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
