--- a/Cekiya.mw
+++ b/Cekiya.mw
@@ -1,5 +1,5 @@
-[[File:EU-Czechia.svg|thumb|Cekiya]]
-[[File:Flag of the Czech Republic.svg|right|thumb|150px|Cekiya]]
+[[File:Flag of the Czech Republic.svg|thumb|250px|<font color="grey">Ibendera ry’Alubaniya</font>]]
+[[File:EU-Czechia.svg|thumb|250px|<font color="grey">Ikarita y’Alubaniya</font>]]
 
 '''Cekiya''' (izina mu [[giceke]] : ''Česko'' cyangwa ''Česká republika'') n’[[igihugu]] muri [[Uburayi]].
 
