*Empty MediaWiki Message*

--- a/Intara_z’u_Rwanda.mw
+++ b/Intara_z’u_Rwanda.mw
@@ -1,5 +1,5 @@
 [[File:Rwanda Provinces 2006.png|thumb|250px|<font color="green">Intara y’u Rwanda (NEW)</font>]]
-[[File:Rwanda Provinces.png|thumb|250px|<font color="green">Intara y’u Rwanda (OLD)</font>]]
+[[File:Rwanda Provinces.png|thumb|250px|<font color="green">Intara y’u Rwanda (Gishaje)</font>]]
 
 '''Intara y’u Rwanda''' rufite intara enye ziyongeraho [[Umujyi wa Kigali]], ari zo: [[Intara y’Amajyepfo]]; [[Intara y’Amajyaruguru]]; [[Intara y’Uburasirazuba]] n’[[Intara y’Uburengerazuba]]. Intara ihuza guverinoma n’uturere, ikagenzura niba imigabo n’imigambi ya Leta bishyirwa mu bikorwa mu rwego rw’uturere. Ni nayo kandi ireba uburyo imiyoborere n’imirimo bihagaze muri rusange ku rwego rw’uturere. Buri Ntara iyoborwa na Guverineri, ushyirwaho na Perezida wa Repubulika bikemezwa na Sena.
 
