*Empty MediaWiki Message*

--- a/Ikibonezamvugo.mw
+++ b/Ikibonezamvugo.mw
@@ -1,5 +1,6 @@
 '''Ikibonezamvugo''' (''grammar'' mu rurimi rw'[[icyongereza]] cyangwa ''se grammaire'' mu rurimi rw'[[igifaransa]]) 
 
+*[[Ikibonezamvugo mu kinyarwanda]]
 
 [[Category:Indimi]]
 
