--- a/Ikibonezamvugo.mw
+++ b/Ikibonezamvugo.mw
@@ -1,6 +1,6 @@
-'''Ikibonezamvugo''' (''grammar'' mu rurimi rw'[[icyongereza]] cyangwa ''se grammaire'' mu rurimi rw'[[igifaransa]]) 
+'''Ikibonezamvugo''' (''grammar'' mu rurimi rw’[[icyongereza]] cyangwa ''se grammaire'' mu rurimi rw’[[igifaransa]]) 
 
-*[[Ikibonezamvugo mu kinyarwanda]]
+*[[Ikibonezamvugo cy’ikinyarwanda]]
 
 [[Category:Indimi]]
 
