--- a/Amazina_y’ururimi_mu_kinyarwanda.mw
+++ b/Amazina_y’ururimi_mu_kinyarwanda.mw
@@ -283,6 +283,7 @@
 * [[Ikilawotiyani]]
 * [[Ikilazi]]
 * [[Ikileziyani]]
+* [[Ikilidiya]]
 * [[Ikiligizamburujuwa]]
 * [[Ikilituwaniya]]
 * [[Ikilojibani]]
