--- a/Sarudi.mw
+++ b/Sarudi.mw
@@ -1,7 +1,7 @@
 [[File:Map of Lydia ancient times.jpg|thumb|250px|<font color="grey">Ikarita ya Sarudi</font>]]
 [[File:SardisGymnasium1February2003.JPG|thumb|250px|<font color="grey">Sarudi</font>]]
 
-'''Sarudi''' wari umurwa mukuru w'ubwami bw'i [[Lidiya]] i [[Manisa]] muri [[Turukiya]].
+'''Sarudi''' (izina mu [[kilidiya]] : ''Safard'' ; izina mu [[kigereki]] : ''Σάρδεις'' ; izina mu [[kinyaperisi]] : '''سارد''' ) wari umurwa mukuru w'ubwami bw'i [[Lidiya]] i [[Manisa]] muri [[Turukiya]].
 
 
 [[Category:Turukiya]]
