*Empty MediaWiki Message*

--- a/Sarudi.mw
+++ b/Sarudi.mw
@@ -5,3 +5,35 @@
 
 
 [[Category:Turukiya]]
+
+[[bg:Сарди]]
+[[ca:Sardes]]
+[[cs:Sardy]]
+[[de:Sardes]]
+[[el:Σάρδεις]]
+[[en:Sardis]]
+[[es:Sardes]]
+[[eo:Sardeso]]
+[[eu:Sardes]]
+[[fa:سارد]]
+[[fr:Sardes]]
+[[gl:Sardes]]
+[[he:סרדיס]]
+[[hr:Sard]]
+[[hu:Szardeisz]]
+[[it:Sardi (città)]]
+[[ja:サルディス]]
+[[ko:사르디스]]
+[[ku:Sardîs]]
+[[la:Sardis]]
+[[nl:Sardis]]
+[[no:Sardis]]
+[[pl:Sardes]]
+[[pt:Sardes]]
+[[ru:Сарды]]
+[[sk:Sardy]]
+[[sh:Sard]]
+[[fi:Sardes]]
+[[sv:Sardes]]
+[[tr:Sardes]]
+[[zh:薩第斯]]
