--- a/Kigali.mw
+++ b/Kigali.mw
@@ -1,6 +1,6 @@
 [[File:CentralKigali.jpg|thumb|300px|Kigali City]]
 
-Kigali ni umurwa mukuru w'u [[Rwanda]]. Ni umugi uherereye hagati mu gihugu ukaba ufite abaturage 851 024 (mu mwaka wa 2005).
+Kigali ni [[umurwa]] mukuru w'u [[Rwanda]]. Ni umugi uherereye hagati mu gihugu ukaba ufite abaturage 851 024 (mu mwaka wa 2005).
 Ni wo mugi nkingi y'ubukungu , umuco, by'igihugu. Imihanda yose yo mu gihugu ni ho itangirira akaba ari yo nkingi ya transiporo.
 Ibiro bya za Ministeri, n'ibya Perezida wa Repubulika biri muri uyu mugi. 70% by'umugi ni uduce tw'icyaro.
 
