*Empty MediaWiki Message*

--- a/Umurwa.mw
+++ b/Umurwa.mw
@@ -1,7 +1,157 @@
 
-
 '''Umurwa'''
 
 Ibihugu biteye imbere byanabonye ko ari byiza kugira imirwa ibiri: '''umurwa w'ubutegetsi''' (''political capital'') n''''umurwa w'ubucuruzi''' (''commercial capital''). 
 
 Ibi nabyo u Rwanda rwari rukwiye kubikora. Ni ukuvuga ko [[Kigali]] yaba umurwa w'ubucuruzi naho umurwa w'igihugu ukimukira ahandi nk'i Gitarama cyangwa se i Nyanza kuko mbona ari ho hagati mu gihugu.
+
+[[Category:Imirwa| ]]
+
+[[af:Hoofstad]]
+[[als:Hauptstadt]]
+[[am:ዋና ከተማ]]
+[[ang:Hēafodstōl]]
+[[ar:عاصمة]]
+[[an:Capital (politica)]]
+[[arc:ܐܪܫܟܝܬܐ]]
+[[az:Paytaxt]]
+[[bjn:Indung banua]]
+[[zh-min-nan:Siú-to͘]]
+[[ba:Башҡала]]
+[[be:Сталіца]]
+[[be-x-old:Сталіца]]
+[[bcl:Kapitolyo]]
+[[bi:Kapitol]]
+[[bar:Hauptstådt]]
+[[bs:Glavni grad]]
+[[br:Kêr-benn]]
+[[bg:Столица]]
+[[ca:Capital]]
+[[ceb:Kapital]]
+[[cs:Hlavní město]]
+[[cy:Prifddinas]]
+[[da:Hovedstad]]
+[[pdc:Haaptschtadt]]
+[[de:Hauptstadt]]
+[[et:Pealinn]]
+[[el:Πρωτεύουσα]]
+[[es:Capital (política)]]
+[[eo:Ĉefurbo]]
+[[eu:Hiriburu (politika)]]
+[[fa:پایتخت]]
+[[hif:Capital]]
+[[fo:Høvuðsstaður]]
+[[fr:Capitale]]
+[[fy:Haadstêd]]
+[[fur:Capitâl]]
+[[ga:Príomhchathair]]
+[[gv:Preeu-valley]]
+[[gl:Capital (política)]]
+[[gu:રાજધાની]]
+[[got:𐌷𐌰𐌿𐌱𐌹𐌳𐌰𐌱𐌰𐌿𐍂𐌲𐍃/Haubidabaurgs]]
+[[ko:수도]]
+[[haw:Kapikala]]
+[[hy:Մայրաքաղաք]]
+[[hr:Glavni grad]]
+[[ilo:Capitolio]]
+[[id:Ibu kota]]
+[[ia:Capital]]
+[[os:Сæйраг сахар]]
+[[is:Höfuðborg]]
+[[it:Capitale (città)]]
+[[he:עיר בירה]]
+[[jv:Ibu kutha]]
+[[kl:Illoqarfiit pingaarnersaat]]
+[[kn:ರಾಜಧಾನಿ]]
+[[krc:Ара шахар]]
+[[ka:დედაქალაქი]]
+[[csb:Stolëca]]
+[[kk:Елорда]]
+[[sw:Mji mkuu]]
+[[koi:Канкар]]
+[[kv:Юркар]]
+[[kg:Mbanza ya kimfumu]]
+[[ht:Kapital]]
+[[ku:Paytext]]
+[[la:Caput (urbs)]]
+[[lv:Galvaspilsēta]]
+[[lt:Sostinė]]
+[[li:Houfsjtad]]
+[[ln:Mbóka-mokonzi]]
+[[lmo:Capital]]
+[[hu:Főváros]]
+[[mk:Главен град]]
+[[mg:Renivohitra]]
+[[ml:തലസ്ഥാനം]]
+[[mt:Belt kapitali]]
+[[mi:Tāone matua]]
+[[arz:عاصمه]]
+[[mzn:نیشتگاه]]
+[[ms:Ibu negara]]
+[[mwl:Capital]]
+[[mn:Нийслэл хот]]
+[[my:မြို့တော်]]
+[[nah:Tēcuacān]]
+[[nl:Hoofdstad]]
+[[nds-nl:Heufdstad]]
+[[new:तलैनकरम् (सन् २००६या संकिपा)]]
+[[ja:首都]]
+[[no:Hovedstad]]
+[[nn:Hovudstad]]
+[[nrm:Capitale]]
+[[oc:Capitala]]
+[[uz:Poytaxt]]
+[[pnb:راجگڑھ]]
+[[pap:Kapital]]
+[[ps:پلازمېنه]]
+[[tpi:Kapitol]]
+[[nds:Hööftstadt]]
+[[pl:Stolica]]
+[[pnt:Πρωτεύουσα]]
+[[pt:Capital]]
+[[crh:Paytaht]]
+[[ro:Capitală]]
+[[rmy:Sherutno foro]]
+[[rm:Chapitala]]
+[[qu:Uma llaqta]]
+[[ru:Столица]]
+[[sah:Киин куорат]]
+[[sc:Capitale]]
+[[sco:Caipital]]
+[[sq:Kryeqyteti]]
+[[si:අගනුවර]]
+[[simple:Capital (city)]]
+[[sk:Hlavné mesto]]
+[[cu:Сто́льнъ гра́дъ]]
+[[sl:Glavno mesto]]
+[[szl:Stolica]]
+[[srn:Mamafoto]]
+[[sr:Главни град]]
+[[sh:Glavni grad]]
+[[su:Ibu kota]]
+[[fi:Pääkaupunki]]
+[[sv:Huvudstad]]
+[[tl:Kabisera]]
+[[ta:தலைநகரம்]]
+[[roa-tara:Capitale, cetate]]
+[[tt:Башкала]]
+[[te:రాజధాని]]
+[[th:เมืองหลวง]]
+[[tr:Başkent]]
+[[tk:Paýtagt]]
+[[udm:Шоркар]]
+[[uk:Столиця]]
+[[ur:دارالحکومت]]
+[[za:Soujduh]]
+[[vec:Cavedal]]
+[[vi:Thủ đô]]
+[[vo:Cifazif]]
+[[fiu-vro:Pääliin]]
+[[zh-classical:京]]
+[[war:Kapital]]
+[[yi:הויפטשטאט]]
+[[yo:Olúìlú]]
+[[zh-yue:首都]]
+[[zea:Oôdstad]]
+[[bat-smg:Suostėnė]]
+[[zh:首都]]
