--- a/Vatikani.mw
+++ b/Vatikani.mw
@@ -1,7 +1,7 @@
 [[File:Flag of the Vatican City.svg|thumb|250px|<font color="grey">Ibendera rya Vatikani</font>]]
 [[File:Location Vatican City Europe.png|thumb|250px|<font color="grey">Ikarita ya Vatikani</font>]]
 
-'''Vatikani''' (izina mu [[gitaliyani]] : ''Stato della Città del Vaticano'' ) n’[[igihugu]] mu [[Burayi]].
+'''Vatikani''' cyangwa '''Umujyi wa Vatikani''' (izina mu [[gitaliyani]] : ''Stato della Città del Vaticano'' ) n’[[igihugu]] mu [[Burayi]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
