--- a/Umujyi_wa_Rubavu.mw
+++ b/Umujyi_wa_Rubavu.mw
@@ -1,3 +1,3 @@
 '''Umujyi wa Rubavu''' uherereye mu Ntara y’Amajyaruguru, ugahana imbibi n’umujyi wa Goma muri Reta ya [[Repubulika Iharanira Demokarasi ya Kongo]].
 
-[[Category:Umujyi wa Rubavu]]
+[[Category:Akarere ka Rubavu]]
