--- a/Ubufaransa.mw
+++ b/Ubufaransa.mw
@@ -1,7 +1,7 @@
 [[File:Flag of France.svg|thumb|250px|<font color="grey">Ibendera ry’Ubufaransa</font>]]
 [[File:EU-France.svg|thumb|250px|<font color="grey">Ikarita y’Ubufaransa</font>]]
 
-'''Ubufaransa''' (izina mu [[gifaransa]] : ''France'' cyangwa ''République française'' ) n’[[igihugu]] mu [[Burayi]].
+'''Ubufaransa''' (izina mu [[gifaransa]] : ''France'' cyangwa ''République française'' ) n’[[igihugu]] mu [[Burayi]]. [[Umurwa]] mukuru w’Ubufaransa witwa [[Paris]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
