*Empty MediaWiki Message*

--- a/Abukaziya.mw
+++ b/Abukaziya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Abkhazia.svg|thumb|250px|<font color="grey">Ibendera ry’Abukaziya</font>]]
 [[File:Europe location ABX.png|thumb|250px|<font color="grey">Ikarita y’Abukaziya</font>]]
 
-'''Abukaziya''' (izina mu [[cyabukaziyani]] : ''Аҧсны'' cyangwa ''Аҧсны Аҳәынҭқарра'' ) n’[[igihugu]] muri [[Aziya]].
+'''Abukaziya''' (izina mu [[cyabukaziyani]] : ''Аҧсны'' cyangwa ''Аҧсны Аҳәынҭқарра'' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru w’Abukaziya witwa [[Sukumi]].
 
 [[Category:Aziya]]
 [[Category:Ibihugu]]
