*Empty MediaWiki Message*

--- a/Abukaziya.mw
+++ b/Abukaziya.mw
@@ -3,6 +3,7 @@
 
 '''Abukaziya''' (izina mu [[cyabukaziyani]] : ''Аҧсны'' cyangwa ''Аҧсны Аҳәынҭқарра'' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru w’Abukaziya witwa [[Sukumi]].
 
+[[Category:Abukaziya]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
