*Empty MediaWiki Message*

--- a/Sukumi.mw
+++ b/Sukumi.mw
@@ -5,3 +5,62 @@
 
 [[Category:Abukaziya]] 
 [[Category:Imirwa]]
+
+[[af:Soechoemi]]
+[[ab:Аҟәа]]
+[[ar:سخومي]]
+[[be:Горад Сухумі]]
+[[be-x-old:Сухумі]]
+[[bg:Сухуми]]
+[[ca:Sukhumi]]
+[[cv:Сухуми]]
+[[cs:Suchumi]]
+[[da:Sukhumi]]
+[[de:Sochumi]]
+[[et:Suhhumi]]
+[[el:Σουχούμ]]
+[[myv:Сухум ош]]
+[[es:Sujumi]]
+[[eo:Suĥumo]]
+[[eu:Sukhum]]
+[[fa:سوخومی]]
+[[fr:Soukhoumi]]
+[[gv:Aqwa]]
+[[gl:Sukhumi]]
+[[ko:수후미]]
+[[hr:Suhumi]]
+[[id:Sukhum]]
+[[os:Сухум]]
+[[it:Sukhumi]]
+[[he:סוחומי]]
+[[jv:Sokhumi]]
+[[ka:სოხუმი]]
+[[koi:Сухум]]
+[[kv:Сухум]]
+[[lv:Suhumi]]
+[[lt:Suchumis]]
+[[hu:Szuhumi]]
+[[mk:Сухуми]]
+[[nl:Soechoemi]]
+[[ja:スフミ]]
+[[no:Sukhumi]]
+[[nn:Sukhumi]]
+[[mhr:Сухум]]
+[[pl:Suchumi]]
+[[pt:Sukhumi]]
+[[ro:Suhumi]]
+[[ru:Сухум]]
+[[sah:Сухуми]]
+[[scn:Sokhumi]]
+[[simple:Sukhumi]]
+[[sk:Suchumi]]
+[[sr:Сухуми]]
+[[sh:Suhumi]]
+[[fi:Suhumi]]
+[[sv:Suchumi]]
+[[tr:Sohum]]
+[[uk:Сухумі]]
+[[vi:Sukhumi]]
+[[vo:Akva]]
+[[war:Sukhumi]]
+[[zh:苏呼米]]
