*Empty MediaWiki Message*

--- a/Sukumi.mw
+++ b/Sukumi.mw
@@ -1,4 +1,5 @@
 [[File:Abkhazia detail map2.png|thumb|250px|<font color="grey">Ikarita ya Sukumi</font>]]
+[[File:Building of the City Council.jpg|thumb|250px|<font color="grey">Sukumi</font>]]
 [[File:Pravit.JPG|thumb|250px|<font color="grey">Perezidansi y’Abukaziya i Sukumi</font>]]
 [[File:Sanatorium of RVSN RF in Sukhumi.jpg|thumb|250px|<font color="grey">Sukumi</font>]]
 
