*Empty MediaWiki Message*

--- a/Ankara.mw
+++ b/Ankara.mw
@@ -4,3 +4,132 @@
 
 [[Category:Turukiya]] 
 [[Category:Imirwa]]
+
+[[ace:Ankara]]
+[[af:Ankara]]
+[[als:Ankara]]
+[[am:አንካራ]]
+[[an:Ankara]]
+[[ang:Ancyra]]
+[[ar:أنقرة]]
+[[arc:ܐܢܩܪܐ]]
+[[arz:انقره]]
+[[av:Анкара]]
+[[az:Ankara]]
+[[be:Горад Анкара]]
+[[be-x-old:Анкара]]
+[[bg:Анкара]]
+[[bjn:Angkara]]
+[[bn:আঙ্কারা]]
+[[bo:ཨན་ཁ་ར།]]
+[[br:Ankara]]
+[[bs:Ankara]]
+[[ca:Ankara]]
+[[cbk-zam:Ankara]]
+[[crh:Ankara]]
+[[cs:Ankara]]
+[[cy:Ankara]]
+[[da:Ankara]]
+[[de:Ankara]]
+[[diq:Anqara (bacar)]]
+[[el:Άγκυρα]]
+[[en:Ankara]]
+[[eo:Ankaro]]
+[[es:Ankara]]
+[[et:Ankara]]
+[[eu:Ankara]]
+[[fa:آنکارا]]
+[[fi:Ankara]]
+[[fj:Ankara]]
+[[fo:Ankara]]
+[[fr:Ankara]]
+[[frp:Ankara]]
+[[fy:Ankara]]
+[[ga:Ankara]]
+[[gag:Ankara]]
+[[gd:Ankara]]
+[[gl:Ancara - Ankara]]
+[[gv:Ankara]]
+[[haw:Ankara]]
+[[he:אנקרה]]
+[[hi:अंकारा]]
+[[hif:Ankara]]
+[[hr:Ankara]]
+[[ht:Ankara]]
+[[hu:Ankara]]
+[[hy:Անկարա]]
+[[ia:Ankara]]
+[[id:Ankara]]
+[[io:Ankara]]
+[[is:Ankara]]
+[[it:Ankara]]
+[[ja:アンカラ]]
+[[jv:Ankara]]
+[[ka:ანკარა (თურქეთი)]]
+[[kk:Анкара]]
+[[kn:ಅಂಕಾರಾ]]
+[[ko:앙카라]]
+[[ku:Enqere]]
+[[ky:Анкара]]
+[[la:Ancyra]]
+[[lad:Ankara]]
+[[lb:Ankara]]
+[[lij:Ankara]]
+[[lmo:Ankara]]
+[[ln:Ankara]]
+[[lt:Ankara]]
+[[lv:Ankara]]
+[[mi:Anakara]]
+[[mk:Анкара]]
+[[ml:അങ്കാറ]]
+[[mr:अंकारा]]
+[[mzn:آنکارا]]
+[[nah:Ancara]]
+[[nds:Ankara]]
+[[nl:Ankara]]
+[[nn:Ankara]]
+[[no:Ankara]]
+[[nov:Ankara]]
+[[oc:Ankara]]
+[[os:Анкара]]
+[[pap:Ankara]]
+[[pl:Ankara]]
+[[pms:Ankara]]
+[[pnb:انکرہ]]
+[[pt:Ancara]]
+[[qu:Ankara]]
+[[ro:Ankara]]
+[[roa-rup:Ancara]]
+[[ru:Анкара]]
+[[sah:Анкара]]
+[[scn:Ankara]]
+[[sco:Ankara]]
+[[sh:Ankara]]
+[[simple:Ankara]]
+[[sk:Ankara]]
+[[sl:Ankara]]
+[[so:Ankara]]
+[[sq:Ankara]]
+[[sr:Анкара]]
+[[sv:Ankara]]
+[[sw:Ankara]]
+[[ta:அங்காரா]]
+[[te:అంకారా]]
+[[tet:Ankara]]
+[[tg:Анкара]]
+[[th:อังการา]]
+[[tl:Ankara]]
+[[tr:Ankara]]
+[[tt:Анкара]]
+[[ug:Enqere]]
+[[uk:Анкара]]
+[[ur:انقرہ]]
+[[vi:Ankara]]
+[[vo:Ankara]]
+[[war:Ankara]]
+[[wo:Ankara]]
+[[wuu:安卡拉]]
+[[yi:אנקארא]]
+[[yo:Ankara]]
+[[zh:安卡拉]]
+[[zh-min-nan:Ankara]]
