*Empty MediaWiki Message*

--- a/Umusigiti_wa_Sultanahmet.mw
+++ b/Umusigiti_wa_Sultanahmet.mw
@@ -20,6 +20,7 @@ Image:SultanAhmetMosqueCourtyard.jpg|
 </gallery>
 
 [[Category:Imisigiti]]
+[[Category:Turukiya]]
 
 [[ace:Meuseujid Sultan Ahmad]]
 [[af:Sultan Ahmet-moskee]]
