--- a/Umusigiti_wa_Kocatepe.mw
+++ b/Umusigiti_wa_Kocatepe.mw
@@ -1,5 +1,5 @@
-[[File:Kocatepe Mosque Ankara.jpg|thumb|250px|<font color="grey">Ikarita ya Sarudi</font>]]
-[[File:Kocatepe Camii Ankara.JPG|thumb|250px|<font color="grey">Ikarita ya Sarudi</font>]]
+[[File:Kocatepe Mosque Ankara.jpg|thumb|250px|<font color="grey">Umusigiti wa Kocatepe</font>]]
+[[File:Kocatepe Camii Ankara.JPG|thumb|250px|<font color="grey">Umusigiti wa Kocatepe</font>]]
 
 '''Umusigiti wa Kocatepe''' (izina mu [[gituruki]] : ''Kocatepe Camii'') ni [[umusigiti]] i [[Ankara]] muri [[Turukiya]].
 
