--- a/Kolombiya.mw
+++ b/Kolombiya.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Colombia.svg|thumb|250px|<font color="grey">Ibendera rya Kolombiya</font>]]
 [[File:Colombia (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Kolombiya</font>]]
 
-'''Kolombiya''' (izina mu [[cyesipanyole]] : ''Colombia'' cyangwa ''República de Colombia '' ) n’[[igihugu]] muri [[Amerika]].
+'''Kolombiya''' (izina mu [[cyesipanyole]] : ''Colombia'' cyangwa ''República de Colombia '' ) n’[[igihugu]] muri [[Amerika]]. [[Umurwa]] mukuru wa Kolombiya witwa [[Bogota]].
 
+[[Category:Kolombiya]]
 [[Category:Amerika]]
 [[Category:Ibihugu]]
 
