--- a/Kolombiya.mw
+++ b/Kolombiya.mw
@@ -3,7 +3,7 @@
 
 '''Kolombiya''' (izina mu [[cyesipanyole]] : ''Colombia'' cyangwa ''República de Colombia '' ) n’[[igihugu]] muri [[Amerika]]. [[Umurwa]] mukuru wa Kolombiya witwa [[Bogota]].
 
-[[Category:Kolombiya]]
+[[Category:Kolombiya| ]]
 [[Category:Amerika]]
 [[Category:Ibihugu]]
 
