--- a/Ubutaliyani.mw
+++ b/Ubutaliyani.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Italy.svg|thumb|250px|<font color="grey">Ibendera ry’Ubutaliyani</font>]]
 [[File:EU-Italy.svg|thumb|250px|<font color="grey">Ikarita y’Ubutaliyani</font>]]
 
-'''Ubutaliyani''' cyangwa '''Ubutariyani''' (izina mu [[gitaliyani]] : ''Italia'' cyangwa ''Repubblica italiana'' ) n’[[igihugu]] mu [[Burayi]].
+'''Ubutaliyani''' cyangwa '''Ubutariyani''' (izina mu [[gitaliyani]] : ''Italia'' cyangwa ''Repubblica italiana'' ) n’[[igihugu]] mu [[Burayi]]. [[Umurwa]] mukuru w’Ubutaliyani witwa [[Roma]].
 
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
