--- a/Ubutaliyani.mw
+++ b/Ubutaliyani.mw
@@ -3,7 +3,7 @@
 
 '''Ubutaliyani''' cyangwa '''Ubutariyani''' (izina mu [[gitaliyani]] : ''Italia'' cyangwa ''Repubblica italiana'' ) n’[[igihugu]] mu [[Burayi]]. [[Umurwa]] mukuru w’Ubutaliyani witwa [[Roma]].
 
-[[Category:Ubutaliyani]]
+[[Category:Ubutariyani]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
 
