*Empty MediaWiki Message*

--- a/Burukina_Faso.mw
+++ b/Burukina_Faso.mw
@@ -1,8 +1,10 @@
 [[File:Flag of Burkina Faso.svg|thumb|250px|<font color="grey">Ibendera rya Burukina Faso</font>]]
 [[File:LocationBurkinaFaso.svg|thumb|250px|<font color="grey">Ikarita ya Burukina Faso</font>]]
 
-'''Burukina Faso''' (izina mu [[gifaransa]] : ''Burkina Faso'' ) n’[[igihugu]] muri [[Afurika]].
+'''Burukina Faso''' (izina mu [[gifaransa]] : ''Burkina Faso'' ) n’[[igihugu]] muri [[Afurika]]. [[Umurwa]] mukuru wa Burukina Faso witwa [[Ouagadougou]].
 
+
+[[Category:Burukina Faso]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
