--- a/Pakisitani.mw
+++ b/Pakisitani.mw
@@ -1,8 +1,9 @@
 [[File:Flag of Pakistan.png|thumb|250px|<font color="grey">Ibendera rya Pakisitani</font>]]
 [[File:Pakistan (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita ya Pakisitani</font>]]
 
-'''Pakisitani''' (izina mu [[cyuridu]] : '''پاکِستان''' cyangwa '''اسلامی جمہوریہ پاکِستان''' ; izina mu [[cyongereza]] : ''Pakistan'' ) n’[[igihugu]] muri [[Aziya]].
+'''Pakisitani''' (izina mu [[cyuridu]] : '''پاکِستان''' cyangwa '''اسلامی جمہوریہ پاکِستان''' ; izina mu [[cyongereza]] : ''Pakistan'' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru wa Pakisitani witwa [[Islamabad]].
 
+[[Category:Pakisitani]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
