*Empty MediaWiki Message*

--- a/Islamabad.mw
+++ b/Islamabad.mw
@@ -1,6 +1,6 @@
 [[File:Islamabad Montage.jpg|thumb|250px|<font color="grey">Amafoto y’umujyi w’Islamabad</font>]]
 
-'''Islamabad''' n’[[umurwa]] mukuru wa [[Pakisitani]].
+'''Islamabad''' (izina mu [[cyuridu]] : '''اسلام آباد''' ) n’[[umurwa]] mukuru wa [[Pakisitani]].
 
 [[Category:Pakisitani]]
 [[Category:Imirwa]] 
