*Empty MediaWiki Message*

--- a/Jamayika.mw
+++ b/Jamayika.mw
@@ -3,6 +3,7 @@
 
 '''Jamayika''' (izina mu [[cyongereza]] : ''Jamaica'' ) n’[[igihugu]] muri [[Amerika]].
 
+[[Category:Jamayika]]
 [[Category:Amerika]]
 [[Category:Ibihugu]]
 
