--- a/Jamayika.mw
+++ b/Jamayika.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Jamaica.svg|thumb|250px|<font color="grey">Ibendera rya Jamayika</font>]]
 [[File:LocationJamaica.svg|thumb|250px|<font color="grey">Ikarita ya Jamayika</font>]]
 
-'''Jamayika''' (izina mu [[cyongereza]] : ''Jamaica'' ) n’[[igihugu]] muri [[Amerika]].
+'''Jamayika''' (izina mu [[cyongereza]] : ''Jamaica'' ) n’[[igihugu]] muri [[Amerika]]. [[Umurwa]] mukuru wa Jamayika witwa [[Kingston]].
 
 [[Category:Jamayika]]
 [[Category:Amerika]]
