*Empty MediaWiki Message*

--- a/Isirayeli.mw
+++ b/Isirayeli.mw
@@ -3,6 +3,7 @@
 
 '''Isirayeli''' (izina mu [[giheburayo]] : '''יִשְׂרָאֵל‎‎''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Isirayeli]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
