*Empty MediaWiki Message*

--- a/Isirayeli.mw
+++ b/Isirayeli.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Israel.svg|thumb|250px|<font color="grey">Ibendera ry’Isirayeli</font>]]
 [[File:LocationIsrael.svg|thumb|250px|<font color="grey">Ikarita y’Isirayeli</font>]]
 
-'''Isirayeli''' (izina mu [[giheburayo]] : '''יִשְׂרָאֵל‎‎''' ) n’[[igihugu]] muri [[Aziya]].
+'''Isirayeli''' (izina mu [[giheburayo]] : '''יִשְׂרָאֵל‎‎''' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru w’Isirayeli witwa [[Tel Aviv]] (''de jure'') na [[Yerusalemu]] (''de facto'').
 
 [[Category:Isirayeli]]
 [[Category:Aziya]]
