*Empty MediaWiki Message*

--- a/Yerusalemu.mw
+++ b/Yerusalemu.mw
@@ -1,6 +1,6 @@
 [[File:Jerusalem infobox image.JPG|thumb|250px|<font color="grey">Amafoto y’umujyi wa Yerusalemu </font>]]
 
-'''Yerusalemu''' (izina mu [[giheburayo]] : '''יְרוּשָׁלַיִם ''' ; izina mu [[cyarabu]] : '''القُدس ''' ) n’[[umurwa]] (''de facto'') mukuru w’[[Isirayeli]].
+'''Yerusalemu''' cyangwa '''Yeruzalemu''' (izina mu [[giheburayo]] : '''יְרוּשָׁלַיִם ''' ; izina mu [[cyarabu]] : '''القُدس ''' ) n’[[umurwa]] (''de facto'') mukuru w’[[Isirayeli]].
 
 Yerusalemu yari umurwa mukuru w’ishyanga ry’[[Abayahudi]], n’icyicaro gikuru cy’ubutegetsi bw’abami bakomokaga mu muryango w’[[Umwami Dawidi]]. 
 
