--- a/Yerusalemu.mw
+++ b/Yerusalemu.mw
@@ -1,4 +1,5 @@
 [[File:Jerusalem infobox image.JPG|thumb|250px|<font color="grey">Amafoto y’umujyi wa Yerusalemu </font>]]
+[[File:JJerusalem Dome of the rock BW 14.JPG|thumb|250px|<font color="grey">Ifoto y’umujyi wa Yerusalemu na Umusigiti</font>]]
 
 '''Yerusalemu''' cyangwa '''Yeruzalemu''' (izina mu [[giheburayo]] : '''יְרוּשָׁלַיִם ''' ; izina mu [[cyarabu]] : '''القُدس ''' ) n’[[umurwa]] (''de facto'') mukuru w’[[Isirayeli]].
 
