*Empty MediaWiki Message*

--- a/Kongo.mw
+++ b/Kongo.mw
@@ -1,7 +1,7 @@
 [[File:Flag of the Republic of the Congo.svg|thumb|250px|<font color="grey">Ibendera rya Kongo</font>]]
 [[File:LocationRCongo.svg|thumb|250px|<font color="grey">Ikarita ya Kongo</font>]]
 
-'''Kongo''' cyangwa '''Repubulika ya Kongo''' (izina mu [[gifaransa]] : ''République du Congo'' ; izina mu [[kinyakongo]] : ''Repubilika ya Kongo'' ; izina mu [[lingala]] : ''Republiki ya Kongó'' ) n’[[igihugu]] cya [[Afurika]] kiri mu burengerazuba bw'[[amajyaruguru]] ya [[Repubulika Iharanira Demokarasi ya Kongo]]
+'''Kongo''' cyangwa '''Repubulika ya Kongo''' (izina mu [[gifaransa]] : ''République du Congo'' ; izina mu [[kinyakongo]] : ''Repubilika ya Kongo'' ; izina mu [[lingala]] : ''Republiki ya Kongó'' ) n’[[igihugu]] cya [[Afurika]] kiri mu burengerazuba bw'[[amajyaruguru]] ya [[Repubulika Iharanira Demokarasi ya Kongo]]. Cyahoze cyitwa '''Kongo Brazzaville'''.
 
 [[Category:Afurika]]
 [[Category:Ibihugu]]
