*Empty MediaWiki Message*

--- a/Arabiya_Sawudite.mw
+++ b/Arabiya_Sawudite.mw
@@ -3,6 +3,7 @@
 
 '''Arabiya Sawudite''' (izina mu [[cyarabu]] : '''المملكة العربية السعودية‎''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Arabiya Sawudite]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
