*Empty MediaWiki Message*

--- a/Umusigiti_wa_Selimiye_(Turukiya).mw
+++ b/Umusigiti_wa_Selimiye_(Turukiya).mw
@@ -2,7 +2,32 @@
 [[File:Salimiye Masjid.jpg|thumb|250px|<font color="grey">Umusigiti wa Selimiye</font>]]
 [[File:Salimiye's beauty and grandeur.jpg|thumb|250px|<font color="grey">Umusigiti wa Selimiye</font>]]
 
-'''Umusigiti wa Quba''' (izina mu [[gituruki]] : ''Selimiye Camii'') ni [[umusigiti]] i [[Edirne]] muri [[Turukiya]].
+'''Umusigiti wa Selimiye''' (izina mu [[gituruki]] : ''Selimiye Camii'') ni [[umusigiti]] i [[Edirne]] muri [[Turukiya]].
 
 [[Category:Imisigiti]]
 [[Category:Turukiya]]
+
+[[az:Səlimiyyə məscidi]]
+[[bg:Селим джамия]]
+[[bs:Selimije džamija]]
+[[de:Selimiye-Moschee]]
+[[en:Selimiye Mosque]]
+[[es:Mezquita de Selim]]
+[[fr:Mosquée Selimiye (Edirne)]]
+[[hr:Selimija]]
+[[hu:Szelim-mecset]]
+[[it:Moschea Selimiye]]
+[[ja:セリミエ・モスク]]
+[[mk:Селимије џамија]]
+[[nl:Selimiye-moskee]]
+[[pl:Selimiye]]
+[[pnb:سلیمیہ مسجد]]
+[[pt:Mesquita Selimiye]]
+[[ru:Мечеть Селимие]]
+[[sh:Selimija]]
+[[sq:Xhamia e Selimit]]
+[[sv:Selimiyemoskén]]
+[[th:มัสยิดเซลิม]]
+[[tr:Selimiye Camii]]
+[[ur:سلیمیہ مسجد]]
+[[zh:塞利米耶清真寺]]
