*Empty MediaWiki Message*

--- a/Umusigiti_wa_Nuruosmaniye.mw
+++ b/Umusigiti_wa_Nuruosmaniye.mw
@@ -1,4 +1,4 @@
-[[File:Nuruosmaniye |thumb|250px|<font color="grey">Umusigiti wa Nuruosmaniye</font>]]
+[[File:Nuruosmaniye Mosque.jpg|thumb|250px|<font color="grey">Umusigiti wa Nuruosmaniye</font>]]
 
 '''Umusigiti wa Nuruosmaniye''' (izina mu [[gituruki]] : ''Nuruosmaniye Camii'') ni [[umusigiti]] i [[Istanbul]] muri [[Turukiya]].
 
