*Empty MediaWiki Message*

--- a/Alubaniya.mw
+++ b/Alubaniya.mw
@@ -3,6 +3,7 @@
 
 '''Alubaniya''' cyangwa '''Repebulika y’Alubaniya''' (izina mu [[kinyalubaniya]] : ''Shqipëria'' cyangwa ''Republika e Shqipërisë'') n’[[igihugu]] muri [[Uburayi]]. [[Umurwa]] mukuru w’Alubaniya witwa [[Tirana]].
 
+[[Category:Alubaniya]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
 
