*Empty MediaWiki Message*

--- a/Aligeriya.mw
+++ b/Aligeriya.mw
@@ -3,6 +3,7 @@
 
 '''Aligeriya''' (izina mu [[cyarabu]] : '''الجزائر‎''' ) n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Aligeriya]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
