*Empty MediaWiki Message*

--- a/Shipure_y’Amajyaruguru.mw
+++ b/Shipure_y’Amajyaruguru.mw
@@ -3,6 +3,7 @@
 
 '''Shipure y’Amajyaruguru''' (izina mu [[gituruki]] : ''Kuzey Kıbrıs'' cyangwa ''Kuzey Kıbrıs Türk Cumhuriyeti'' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Shipure y’Amajyaruguru]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
