*Empty MediaWiki Message*

--- a/Ubugande.mw
+++ b/Ubugande.mw
@@ -3,6 +3,7 @@
 
 '''Ubugande''' cyangwa '''Yuganda''' , '''Repubulika y’Ubugande''' (izina mu [[cyongereza]] : ''Republic of Uganda'' ; izina mu [[giswayili]] : ''Jamhuri ya Uganda'' ; izina mu [[kiganda]] : ''Yuganda'' ) n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Ubugande]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
