--- a/Irani.mw
+++ b/Irani.mw
@@ -3,6 +3,8 @@
 
 '''Irani''' cyangwa '''Repubulika y’Ubuyisilamu ya Irani''' (izina mu [[kinyaperisi]] : '''ایران''' cyangwa '''جمهوری اسلامی ایران''' ) n’[[igihugu]] muri [[Aziya]].
  
+[[Category:Irani]]
+[[Category:Aziya]]
 [[Category:Ibihugu]]
 
 [[ace:Iran]]
