*Empty MediaWiki Message*

--- a/Bulugariya.mw
+++ b/Bulugariya.mw
@@ -1,7 +1,7 @@
-[[File:EU-Bulgaria.svg|thumb|Buligariya]]
-[[File:Flag of Bulgaria.svg|right|thumb|150px|Buligariya]]
+[[File:Flag of Bulgaria.svg|thumb|250px|<font color="grey">Ibendera rya Buligariya</font>]]
+[[File:EU-Bulgaria.svg|thumb|250px|<font color="grey">Ikarita ya Buligariya</font>]]
 
-'''Buligariya''' n’igihugu muri [[Uburayi]].
+'''Buligariya''' (izina mu [[kinyabulugariya]] : ''България'' cyangwa ''Република България'') n’[[igihugu]] muri [[Uburayi]]. [[Umurwa]] mukuru w’Alubaniya witwa [[Sofiya]].
 
 [[Category:Buligariya]]
 [[Category:Uburayi]]
