*Empty MediaWiki Message*

--- a/Bulugariya.mw
+++ b/Bulugariya.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Bulgaria.svg|thumb|250px|<font color="grey">Ibendera rya Buligariya</font>]]
 [[File:EU-Bulgaria.svg|thumb|250px|<font color="grey">Ikarita ya Buligariya</font>]]
 
-'''Buligariya''' (izina mu [[kinyabulugariya]] : ''България'' cyangwa ''Република България'') n’[[igihugu]] muri [[Uburayi]]. [[Umurwa]] mukuru w’Alubaniya witwa [[Sofiya]].
+'''Buligariya''' (izina mu [[kinyabulugariya]] : ''България'' cyangwa ''Република България'') n’[[igihugu]] muri [[Uburayi]]. [[Umurwa]] mukuru wa Buligariya witwa [[Sofiya]].
 
 [[Category:Buligariya]]
 [[Category:Uburayi]]
