*Empty MediaWiki Message*

--- a/Bangaladeshi.mw
+++ b/Bangaladeshi.mw
@@ -3,6 +3,7 @@
 
 '''Bangaladeshi''' (izina mu [[kibengali]] : '''বাংলাদেশ''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Bangaladeshi]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
