--- a/Umusigiti_wa_Noyabaad.mw
+++ b/Umusigiti_wa_Noyabaad.mw
@@ -1,7 +1,10 @@
 [[File:Noyabaad Mosque (6).jpg|thumb|250px|<font color="grey">Umusigiti wa Noyabaad</font>]]
 [[File:Noyabaad Mosque (13).jpg|thumb|250px|<font color="grey">Umusigiti wa Noyabaad</font>]]
 
-'''Umusigiti wa Noyabaad''' (izina mu [[kinyabulugariya]] : '''নয়াবাদ মসজিদ''') ni [[umusigiti]] i [[Nayabad]] muri [[Bangaladeshi]].
+'''Umusigiti wa Noyabaad''' (izina mu [[kibengali]] : '''নয়াবাদ মসজিদ''') ni [[umusigiti]] i [[Nayabad]] muri [[Bangaladeshi]].
 
 [[Category:Imisigiti]]
 [[Category:Bangaladeshi]]
+
+[[bn:নয়াবাদ মসজিদ]]
+[[en:Noyabaad Mosque]]
