--- a/Kameruni.mw
+++ b/Kameruni.mw
@@ -3,6 +3,7 @@
 
 '''Kameruni''' (izina mu [[cyongereza]] : ''Cameroon'' ; izina mu [[gifaransa]] : ''Cameroun'' ) n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Kameruni]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
