--- a/Ubushinwa.mw
+++ b/Ubushinwa.mw
@@ -3,6 +3,7 @@
 
 '''Ubushinwa''' (izina mu [[gishinwa]] : '''中华人民共和国''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Ubushinwa]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
