--- a/Ubuhinde.mw
+++ b/Ubuhinde.mw
@@ -1,9 +1,9 @@
 [[File:Flag of India.svg|thumb|250px|<font color="grey">Ibendera ry’Ubuhinde</font>]]
 [[File:India (orthographic projection).svg|thumb|250px|<font color="grey">Ikarita y’Ubuhinde</font>]]
 
-'''Ubuhinde''' (izina mu [[igihindi]]: भारत गणराज्य ) n’[[igihugu]] muri [[Aziya]].
+'''Ubuhinde''' (izina mu [[igihindi]]: '''भारत गणराज्य''' ) n’[[igihugu]] muri [[Aziya]].
 
-
+[[Category:Ubuhinde]]
 [[Category:Azia]]
 [[Category:Ibihugu]] 
 
