*Empty MediaWiki Message*

--- a/Mali.mw
+++ b/Mali.mw
@@ -3,6 +3,7 @@
 
 '''Mali''' (izina mu [[gifaransa]] : ''République du Mali'' ; izina mu [[kibambara]] : ''Mali ka Fasojamana'') n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Mali]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
