--- a/Umusigiti_wa_Djinguereber.mw
+++ b/Umusigiti_wa_Djinguereber.mw
@@ -1,7 +1,7 @@
 [[File:Djinguereber in Timbuktu.jpg|thumb|250px|<font color="grey">Umusigiti wa Djinguereber</font>]]
 [[File:Djingareiber cour.jpg|thumb|250px|<font color="grey">Umusigiti wa Djinguereber</font>]]
 
-'''Umusigiti wa Nusretiye'''  ni [[umusigiti]] i [[Timbuktu ]] muri [[Mali]].
+'''Umusigiti wa Djinguereber'''  ni [[umusigiti]] i [[Timbuktu ]] muri [[Mali]].
 
 [[Category:Imisigiti]]
 [[Category:Mali]]
