--- a/Umusigiti_wa_Djenné.mw
+++ b/Umusigiti_wa_Djenné.mw
@@ -1,4 +1,5 @@
 [[File:Great Mosque of Djenné 3.jpg|thumb|250px|<font color="grey">Umusigiti wa Djenné</font>]]
+[[File:Great Mosque of Djenné 1.jpg|thumb|250px|<font color="grey">Umusigiti wa Djenné</font>]]
 
 '''Umusigiti wa Djenné''' ni [[umusigiti]] i [[Djenné]] muri [[Mali]].
 
