--- a/Turukimenisitani.mw
+++ b/Turukimenisitani.mw
@@ -3,6 +3,7 @@
 
 '''Turukimenisitani''' cyangwa '''Turikimenisitani''' (izina mu [[giturukimeni]] : ''Türkmenistan'' ) n’[[igihugu]] muri [[Aziya]].
  
+[[Category:Turukimenisitani]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
