*Empty MediaWiki Message*

--- a/Umusigiti_wa_Ertuğrul_Gazi.mw
+++ b/Umusigiti_wa_Ertuğrul_Gazi.mw
@@ -1,5 +1,4 @@
-[[File:Great Mosque of Djenné 1.jpg|thumb|250px|<font color="grey">Umusigiti wa Ertuğrul Gazi</font>]]
-[[File:Djinguereber in Timbuktu.jpg|thumb|250px|<font color="grey">Umusigiti wa Fenari </font>]]
+[[File:Ertugrul Gazi Mosque in Ashgabat, Turkmenistan.jpg|thumb|250px|<font color="grey">Umusigiti wa Ertuğrul Gazi</font>]]
 
 '''Umusigiti wa Ertuğrul Gazi''' (izina mu [[giturukimeni]] : ''Ärtogrul Gazy metjidi'') ni [[umusigiti]] i [[Ashgabat]] muri [[Turukimenisitani]].
 
