*Empty MediaWiki Message*

--- a/Senegali.mw
+++ b/Senegali.mw
@@ -3,6 +3,7 @@
 
 '''Senegali''' (izina mu [[gifaransa]] : ''République du Sénégal'' ; izina mu [[kiwolofu ]] : ''Réewum Senegaal'' ) n’[[Afurika]] muri [[Afurika]].
 
+[[Category:Senegali]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
