--- a/Esipanye.mw
+++ b/Esipanye.mw
@@ -3,6 +3,7 @@
 
 '''Esipanye''' cyangwa '''Hisipaniya''' (izina mu [[cyesipanyole]] : ''España'' cyangwa ''Reino de España'' ) n’[[igihugu]] muri [[Aziya]]. Umurwa mukuru w’u Esipanye witwa [[Madrid]].
  
+[[Category:Esipanye]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]] 
 
