*Empty MediaWiki Message*

--- a/Indonesiya.mw
+++ b/Indonesiya.mw
@@ -3,6 +3,7 @@
 
 '''Indonesiya''' (izina mu [[kinyendonisiya]] : ''Indonesia'' cyangwa ''Republik Indonesia'' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Indonesiya]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
