*Empty MediaWiki Message*

--- a/Icyace.mw
+++ b/Icyace.mw
@@ -3,3 +3,28 @@
 '''Icyace''' (izina mu cyace : ''Bahsa Acèh'' ) ni [[ururimi]] rwa [[Ace]] muri [[Indonesiya]].
 
 [[Category:Indimi]]
+
+[[ace:Bahsa Acèh]]
+[[an:Idioma achenés]]
+[[bn:আচে ভাষা]]
+[[es:Idioma achenés]]
+[[eo:Aĉea lingvo]]
+[[fr:Aceh (langue)]]
+[[gl:Lingua achinesa]]
+[[id:Bahasa Aceh]]
+[[it:Lingua aceh]]
+[[jv:Basa Acèh]]
+[[lt:Ačehų kalba]]
+[[ms:Bahasa Aceh]]
+[[nl:Atjehs]]
+[[ja:アチェ語]]
+[[pl:Język aceh]]
+[[pt:Língua achém]]
+[[ru:Ачехский язык]]
+[[fi:Aceh’n kieli]]
+[[sv:Acehnesiska]]
+[[ta:அசினிய மொழி]]
+[[th:ภาษาอาเจะห์]]
+[[uk:Ачехська мова]]
+[[yo:Achinese]]
+[[diq:Açehki]]
