--- a/Umusigiti_wa_Sulutani_Suriansyah.mw
+++ b/Umusigiti_wa_Sulutani_Suriansyah.mw
@@ -1,6 +1,6 @@
 [[File:Samping Masjid Suriansyah.jpg|thumb|250px|<font color="grey">Umusigiti wa Sultan Suriansyah</font>]]
 
-'''Umusigiti wa Sultan Suriansyah''' (izina mu [[kibanjari]] : ''Masigit Sultan Suriansyah'') ni [[umusigiti]] i [[Banjarmasin]] muri [[Indonesiya]].
+'''Umusigiti wa Sultan Suriansyah''' (izina mu [[kibanjari]] : ''Masigit Sultan Suriansyah'' cyangwa ''Masigit Kuin'' ) ni [[umusigiti]] i [[Banjarmasin]] muri [[Indonesiya]].
 
 [[Category:Imisigiti]]
 [[Category:Indonesiya]]
