--- a/Bosiniya_na_Herizegovina.mw
+++ b/Bosiniya_na_Herizegovina.mw
@@ -3,6 +3,7 @@
 
 '''Bosiniya na Herizegovina''' (izina mu [[kinyabosiniya]] na [[kinyakorowasi]] : ''Bosna i Hercegovina'' ; izina mu [[kinyaseribiya]] : ''Босна и Херцеговина'' ) n’[[igihugu]] muri [[Uburayi]].
 
+[[Category:Bosiniya na Herizegovina]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
 
