*Empty MediaWiki Message*

--- a/Ubuyapani.mw
+++ b/Ubuyapani.mw
@@ -3,6 +3,7 @@
 
 '''Ubuyapani''' (izina mu [[kiyapani]] : '''日本国''' cyangwa '''日本國''') n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Ubuyapani]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
