*Empty MediaWiki Message*

--- a/Umusigiti_wa_Kobe.mw
+++ b/Umusigiti_wa_Kobe.mw
@@ -2,6 +2,9 @@
 
 '''Umusigiti wa Kobe''' (izina mu [[kiyapani]] : '''神戸モスク''') ni [[umusigiti]] i [[Kobe]] muri [[Ubuyapani]].
 
+== Imiyoboro 
+*http://www.kobemosque.info/
+
 [[Category:Imisigiti]]
 [[Category:Ubuyapani]]
 
