*Empty MediaWiki Message*

--- a/Umusigiti_wa_Kobe.mw
+++ b/Umusigiti_wa_Kobe.mw
@@ -2,7 +2,7 @@
 
 '''Umusigiti wa Kobe''' (izina mu [[kiyapani]] : '''神戸モスク''') ni [[umusigiti]] i [[Kobe]] muri [[Ubuyapani]].
 
-== Imiyoboro 
+== Imiyoboro ==
 *http://www.kobemosque.info/
 
 [[Category:Imisigiti]]
