*Empty MediaWiki Message*

--- a/Kosovo.mw
+++ b/Kosovo.mw
@@ -3,6 +3,7 @@
 
 '''Kosovo''' (izina mu [[kinyalubaniya]] : ''Republika e Kosovës'' ; izina mu [[kinyaseribiya]] : ''Република Косово'' ; izina mu [[gituruki]] : ''Kosova Cumhuriyeti'' ) n’[[igihugu]] mu [[Burayi]].
 
+[[Category:Kosovo]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
 
