*Empty MediaWiki Message*

--- a/Libiya.mw
+++ b/Libiya.mw
@@ -3,6 +3,7 @@
 
 '''Libiya''' (izina mu [[cyongereza]] : '''ليبيا ‎ ''' cyangwa '''الجماهيرية العربية الليبية الشعبية الإشتراكية العظمى ‎ ''' ) n’[[igihugu]] muri [[Afurika]].
 
+[[Category:Libiya]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
