*Empty MediaWiki Message*

--- a/Ubwongereza.mw
+++ b/Ubwongereza.mw
@@ -3,6 +3,7 @@
 
 '''Ubwongereza''' (izina mu [[cyongereza]] : ''United Kingdom'' cyangwa ''United Kingdom of Great Britain and Northern Ireland'' ) n’[[igihugu]] mu [[Burayi]].
 
+[[Category:Ubwongereza]]
 [[Category:Uburayi]]
 [[Category:Ibihugu]]
 
