*Empty MediaWiki Message*

--- a/Ikerene.mw
+++ b/Ikerene.mw
@@ -3,7 +3,7 @@
 
 '''Ikerene''' (izina mu [[kinya-ikarayini]] : ''Україна'' ) n’[[igihugu]] mu [[Burayi]].
 
-[[Category:Burayi]]
+[[Category:Uburayi]]
 [[Category:Ibihugu]]
 
 [[ab:Украина]]
