--- a/Malesiya.mw
+++ b/Malesiya.mw
@@ -3,6 +3,7 @@
 
 '''Malesiya''' cyangwa '''Maleziya''' (izina mu [[kimalayi]] : ''Malaysia'' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Malesiya]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
