*Empty MediaWiki Message*

--- a/Umusigiti_wa_Putra.mw
+++ b/Umusigiti_wa_Putra.mw
@@ -1,4 +1,4 @@
-[[File:YosriMasjidPutra.jpg|thumb|250px|<font color="grey">Umusigiti wa Putra</font>]]
+[[File:Masjid Putra Putrajaya Dec 2006 002.jpg|thumb|250px|<font color="grey">Umusigiti wa Putra</font>]]
 [[File:Putrajaya Mosque 2288564202 525ee843c2.jpg|thumb|250px|<font color="grey">Umusigiti wa Putra</font>]]
 [[File:Putra Mosque 95164719 02daf597ec.jpg|thumb|250px|<font color="grey">Umusigiti wa Putra</font>]]
 
