--- a/Paris.mw
+++ b/Paris.mw
@@ -1,4 +1,5 @@
 [[File:Paris - Eiffelturm und Marsfeld2.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Paris</font>]]
+[[File:Galerie Lafayette Haussmann Dome.jpg|thumb|250px|<font color="grey">Galerie Lafayette i Paris</font>]]
 
 '''Paris''' n’[[umurwa]] mukuru w'[[Ubufaransa]].
 
