*Empty MediaWiki Message*

--- a/Ubudage.mw
+++ b/Ubudage.mw
@@ -1,7 +1,7 @@
 [[File:Flag of Germany.svg|thumb|250px|<font color="grey">Ibendera ry’Ubudage</font>]]
 [[File:EU-Germany.svg|thumb|250px|<font color="grey">Ikarita y’Ubudage</font>]]
 
-'''Ubudage''' (izina mu [[gidage]] : ''Deutschland'' cyangwa ''Bundesrepublik Deutschland'' ) n’[[igihugu]] mu [[Burayi]].
+'''Ubudage''' (izina mu [[gidage]] : ''Deutschland'' cyangwa ''Bundesrepublik Deutschland'' ) n’[[igihugu]] mu [[Burayi]]. [[Umurwa]] mukuru w’Ubudage witwa [[Berlin]].
 
 Igihugu cyo mu [[Uburayi|Burayi]] bw’iburengerazuba.
 
