*Empty MediaWiki Message*

--- a/Berlin.mw
+++ b/Berlin.mw
@@ -1,6 +1,6 @@
 [[File:Berlin skyline 2009wl2.jpg|thumb|250px|<font color="grey">Ifoto y’umujyi wa Berlin</font>]]
 
-'''Berlin''' n’[[umurwa]] mukuru w’[[Ubudage]].
+Umujyi wa '''Berlin''' n’[[umurwa]] mukuru w’[[Ubudage]].
 
 [[Category:Ubudage]]
 [[Category:Imirwa]] 
