*Empty MediaWiki Message*

--- a/Bernard_Makuza.mw
+++ b/Bernard_Makuza.mw
@@ -1,6 +1,6 @@
 '''Bernard Makuza''' (yavutse mu 1961) ni [[umunyapolitiki]] w’[[umunyarwanda]] wabaye [[Minisitiri w’Intebe]] wa munani w’u [[Rwanda]] kuva tariki [[8 Werurwe]] [[2000]] kugeza magingo aya. Abyarwa na Makuza Anastase, nawe wabaye Minisitiri mu gihe cya Repubulika ya mbere, kubwa Perezida Gregoire Kayibanda, aho yari Minisitiri w'Uburezi, hagati y'1969 na 1973.
 
-[[Category:Abaminisitiri] 
+[[Category:Abaminisitiri]]]
 [[Category:Abanyarwanda]] 
 [[Category:Abagabo]] 
 
