*Empty MediaWiki Message*

--- a/Frank_Habineza.mw
+++ b/Frank_Habineza.mw
@@ -17,3 +17,6 @@ Muri [[Nyakanga]] 2010, visi perezida w’iri shyaka, [[André Kagwa Rwisereka]]
 [[Category:Abanyepolitiki]] 
 [[Category:Abanyarwanda]] 
 [[Category:Abagabo]]
+
+[[en:Frank Habineza]]
+[[fr:Frank Habineza]]
