--- a/Frank_Habineza.mw
+++ b/Frank_Habineza.mw
@@ -1,4 +1,4 @@
-'''Frank Habineza''' yavukiye I Mityana muri [[Uganda]] <ref name="AllAfrica_121109"><font color="grey">(mu cyongereza)</font>[http://allafrica.com/stories/200911120762.html "No New Ideas From Chairman of New Party in Rwanda"], ''Focus Media'', 12 novembre 2009</ref> mu 1977, ni umunyapolitiki w’umunyarwanda. Ni umwe mu bashinze ishyaka [[Democratic Green Party]] <ref name="HRW_210710"><font color="grey">(mu cyongereza)</font>[http://www.hrw.org/en/news/2010/07/20/rwanda-allow-independent-autopsy-opposition-politician "Rwanda: Allow Independent Autopsy of Opposition Politician"], Human Rights Watch, 21 juillet 2010</ref> , <ref name="AllAfrica_121109"/> , aribera perezida wa mbere, kugeza n’ubu ni we ukiriyobora.
+'''Frank Habineza''' yavukiye I Mityana muri [[Uganda]] <ref name="AllAfrica_121109"><font color="grey">(mu cyongereza)</font>[http://allafrica.com/stories/200911120762.html "No New Ideas From Chairman of New Party in Rwanda"], ''Focus Media'', 12 novembre 2009</ref> mu 1977, ni [[umunyapolitiki]] w’[[umunyarwanda]]. Ni umwe mu bashinze ishyaka [[Democratic Green Party]] <ref name="HRW_210710"><font color="grey">(mu cyongereza)</font>[http://www.hrw.org/en/news/2010/07/20/rwanda-allow-independent-autopsy-opposition-politician "Rwanda: Allow Independent Autopsy of Opposition Politician"], Human Rights Watch, 21 juillet 2010</ref> , <ref name="AllAfrica_121109"/> , aribera perezida wa mbere, kugeza n’ubu ni we ukiriyobora.
 
 Amashuri ye yayize muri [[Kaminuza Nkuru y’u Rwanda]] I [[Butare]] <ref name="AllAfrica_121109"/>.
 
