--- a/James_Kabarebe.mw
+++ b/James_Kabarebe.mw
@@ -1,6 +1,6 @@
 [[Jenerali]] '''James Kabarebe''' ni umunyarwanda. Yabaye Umugaba Mukuru w’Ingabo z’u [[Rwanda]]. Mbere yaho yabaye umugaba w'ihuriro ry' ingabo zigamije kubohora [[Repubulika Iharanira Demukarasi ya Kongo]]. Kuri ubu ni [[Minisitiri w’Ingabo]] z’u Rwanda. 
 
-[[Category:Abaminisitiri]]]
+[[Category:Abaminisitiri]]
 [[Category:Abanyarwanda]] 
 [[Category:Abagabo]] 
 
