--- a/Amagambo_ahinnye.mw
+++ b/Amagambo_ahinnye.mw
@@ -1,10 +1,11 @@
 '''Amagambo ahinnye'''
 
 == A ==
-*'''ADF''' [[Ikigega Nyafurika Gitsura Amajyambere]] ( ''African Development Fund'' )
+* '''ADF''' [[Ikigega Nyafurika Gitsura Amajyambere]] ( ''African Development Fund'' )
 * '''AEC''' [[Umuryango w’Ubukungu bw’Afurika]] 
-*'''AMCOW''' [[Inama y’abaminisitiri b’ibihugu by’Afurika ku kibazo cy’amazi]]
-*'''ATU''' [[Ishami ryo Kurwanya Iterabwoba]] (''Anti Terrorism Unit'')
+* '''AfDB''' [[Banki Nyafurika Itsura Amajyambere]] (''African Development Bank'' )
+* '''AMCOW''' [[Inama y’abaminisitiri b’ibihugu by’Afurika ku kibazo cy’amazi]]
+* '''ATU''' [[Ishami ryo Kurwanya Iterabwoba]] (''Anti Terrorism Unit'')
 * '''AU''' [[Umuryango w'Ubumwe bw'Afurika]]
 
 == B ==
