*Empty MediaWiki Message*

--- a/Imigani_migufi_y’Ikinyarwanda.mw
+++ b/Imigani_migufi_y’Ikinyarwanda.mw
@@ -1,6 +1,8 @@
 '''Imigani migufi y’Ikinyarwanda'''
 
+[[Imigani migufi]] ariyo bakunze kwita “Imigani y’imigenurano” nubwo ivugitse mu buryo bunyarutse, irusha ibindi byose kuranga umuco rusange w’[[abanyarwanda]]. Ushaka kumenya uburezi n’uburere cyangwa imibanire y’abantu bya Kinyarwanda wabisangamo.
 
+Nkuko amateka y’ubuvanganzo nyarwanda abigaragaza ,umugani n’ipfundo ry’amagambo atonze neza, Gacamigani yakagiriyemo ihame ridutoza gukora iki cyangwa se kudakora kiriya. Mbese muri make umugani ni umwanzuro w’amarenga y’intekerezo. Umugani uvuga ukuri ,ariko muri kamere yawo ntabwo wo uba ari ukuri.Dore ingero zimwe na zimwe z’imigani migufi.
 
 == A ==
 *Ababari bashyize hamwe baruta umunani barasana.
