--- a/Ubuvanganzo.mw
+++ b/Ubuvanganzo.mw
@@ -2,6 +2,8 @@
 
 '''Ubuvanganzo nyarwanda''' harimo ibisigo, [[amazina y'inka]], [[ibyivugo]], [[ibisingizo]], [[ibihozo]], [[imigani miremire]], [[ibitekerezo]], [[imigani migufi]] (imigenurano), [[inshoberamahanga]], [[insigamigani]], [[ibisakuzo]], [[amavumvu]], [[amasare]], [[amahigi]], [[amagorane]], [[ibitongero]] (mu kuragura, guterekera, gutukura umwana, kwambika imana zeze, guhura, kugangahura, guhanura, kugombora, kuroga n’ibindi)
 
+== ==
+*[[Ubuvanganzo nyemvugo]]
 
 [[Category:Ubuvanganzo| ]] 
 
