--- a/Rwanda.mw
+++ b/Rwanda.mw
@@ -1,5 +1,5 @@
 [[File:Flag of Rwanda.svg|thumb|250px|<font color="grey">Ibendera rya Repubulika y’u Rwanda </font>]]
-[[File:Coat of arms of Rwanda.svg|thumb|250px|<font color="grey"></font>]]
+[[File:Coat of arms of Rwanda.svg|thumb|250px|<font color="grey">Icyirangantego cy’Rwanda</font>]]
 [[File:LocationRwanda.svg|thumb|250px|<font color="grey">Ikarita ya Repubulika y’u Rwanda </font>]]
 
 '''U Rwanda''' cyangwa '''Repubulika y’u Rwanda'''
