--- a/Kaminuza_nkuru_y’u_Rwanda.mw
+++ b/Kaminuza_nkuru_y’u_Rwanda.mw
@@ -5,8 +5,38 @@
 '''Ibiri kuri iyi paji''' ([[hisha]]). <!--aya makuru ashobora kuvugururwa-->
 
 == Amateka ==
+Ikimara gushingwa, iyi kaminuza yatangiranye [[amashami]] (''facultés'') atatu gusa, ari yo: Ishami ry’ubuganga; Ishami rijyanye n’ubumenyi bw’umuryango (''sciences sociales'') n’Ishami nderabarezi (''teacher training college''). Yatangiranye kandi abanyeshuli 51 n’abarimu 16.  
 
-<!--aya makuru ashobora kuvugururwa-->
+Muri [[jenoside yakorewe Abatutsi yo muw’1994]], iyi kaminuza yaguyemo inzirakarengane nyinshi ndetse ikurizamo no gufunga, ifungura mu mwaka w’1995. Ikimara gufungura, ururimi rw’uburezi rwahise ruba [[icyongereza]], kigakoreshwa hamwe n’[[igifaransa]]. 
+
+Mu mwaka w’2005, uburere bwatangwaga muri kaminuza bwibanze ku bumenyi-ngiro (''science'') n’ikoranabuhanga, ndetse n’ubumenyamuntu (''humanities''), bikigishwa mu rurimi rw’igifaransa n’icyongereza.   Guhera mu mwaka w’2005, abanyeshuli bigaga muri iyi kaminuza babarirwaga kuri 8221, naho abarimu bakaba 425. 
+
+Dore amatariki y’ingirakamaro n’ibikorwa byabayeho muri kaminuza y’u Rwanda:
+
+*Kuwa 3 Ugushyingo 1963: iyi kaminuza yafunguwe ku mugaragaro.
+*Kuwa 12 Gicurasi 1964: hatowe itegeko rishyiraho iyi kaminuza. 
+*1966: hashinzwe ikigo cy’igihugu cy’uburezi ku nkunga ya UNDP ifatanije na UNESCO. Iki kigo cyari kigamije guhugura no kuzamura ubumenyi bw’abarimu bigishaga mu mashuli yisumbuye.  
+*1967: iyi kaminuza yaraguwe hagamijwe kuyegereza abaturage ngo ibafashe. 
+*1972: hashyizweho ikigo cy’ubushakashatsi gishingiye kuri pharmacy mu ishami ry’ubuganga. Iri shami ryatangiye gukora ku buryo bwigenga guhera mu mwaka w’1980. 
+*Gicurasi 1973: kaminuza y’u Rwanda yashyizeho amahugurwa animbitse ku nzobere z’abubatsi, ishyiraho n’imbanzirizamushinga ku bukanishi buhanitse bw’ibikoresho by’umuriro (electro mechanic engineering).  
+*Ukwakira 1973: hafunguwe ishami ry’amategeko ku bufatanye na kaminuza ya Instelling Antwerpen. 
+*1974: mu ishami ry’ubumenyi-ngiro hashyizweho uburyo bwo kwiga no gukora ubushakashatsi ku ngufu z’amashanyarazi. Iri shami ryatangiye kwigenga mu mwaka w’1997 
+*Kuwa 13 Kamena 1979: hashinzwe ishami ry’ubuhinzi n’ubworozi (agronomy) mu ishami ry’umumenyi-ngiro. *Kuwa 1 Ukwakira 1981: akminuza y’u Rwanda yafunguye ishami mu cyahoze ari perefegitura ya Ruhengeri, iba igize amashami abiri. Nyuma y’imyaka mike, ishami ry’amategeko ryimukiye i Mburabuturo. 
+*Ugushyingo 1988: hijihijwe imyaka 25 kaminuza y’u Rwanda yari imaze ishinzwe. Hashyizweho kandi ikigo cy’ubutegetsi n’amategeko (Institute of Public Administration-ISAP), ku bufatanye n’umuryango Konrad Adanauer. 
+*Mata-Nyakanga 1994: abarezi n’abanyeshuli batari bake bazize jenoside yakorewe abatutsi. Hangiritse kandi ibikoresho bitandukanye, inyubako, n’ibindi. Ibi byatumye kaminuza ihita ifungwa. 
+*Mutarama 1995: kampisi ya Ruhengeri n’ishami ry’amategeko byimukiye ku cyicaro gikuru cya kaminuza i Butare. Kuri iyi tariki kandi ni ho kaminuza yongeye gufungurwa, maze amashami n’amashuli yose byimurirwa i Butare. Muri uyu mwaka, kaminuza yari iteganijwe gutangirana abanyeshuli 1600, ariko itangirana 4500. Aha ni naho icyongereza cyatangiye kuba ururimi rw’uburezi. 
+*Kuwa 2 Mata 1996: hashyizweho ishuli ry’ubumenyi n’ikoranabuhanga (ESTI). 
+*1997: hashyizweho umwaka w’indimi (igifaransa n’icyongereza) ku banyeshuli bose batangira umwaka wa mbere muri kaminuza y’u Rwanda. 
+*1998: hatangijwe icyiciro gihanitse (doctorate) mu ishami ry’ubuganga.  
+*Kuwa 15 Kamena 1998: hashyizweho komisiyo ishinzwe ubushakashatsi.
+*Mu mpera z’umwaka w’1998: ishami ry’ubumenyi n’iry’ubumenyi-ngiro yarateranijwe abyara ishami ry’ubumenyi n’ikoranabuhanga. 
+*1999: hashinzwe ishami ryigisha gukemura amakimbirane. 
+*Kuwa 27 Ukwakira 1999: hashinzwe ihuriro ryo kurwanya SIDA muri kaminuza y’u Rwanda. 
+*Ukuboza 1999: hashinzwe iahami rya kaminuza ry’indimi, ryari rifite intego yo guteza imbere indimi n’umuco mu rwego rwo gushyigikira ubumwe bw’igihugu, ubwiyunge n’amahoro. Iri shami kandi ryari ritegerejwe guteza imbere umuco nyarwanda mu mahanga.  
+*Mata 2000: hashinzwe ishuli ry’ubuzima (Public Health) *Kanama 2000: ishuli ry’ubumenyi n’ikoranabuhanga ryahindutse ishuli ry’itangazamakuru n’itumanaho, mu rwego rwo guteza imbere igihugu muri uru rwego. 
+*Kuwa 3 Ugushyingo 2002: hashyizweho alumni ya kminuza y’u Rwanda. 
+*Kuwa 10 Ukwakira 2005: hashyizweho ku mugaragaro ishami rihanitse (post-graduate) mu ishuli ry’ubuganga. 
+*Kuwa 18 Ugushyingo 2005: hashinzwe ku mugaragaro “Radio Salus.”
 
 == Colleges ==
 
