*Empty MediaWiki Message*

--- a/Kaminuza_nkuru_y’u_Rwanda.mw
+++ b/Kaminuza_nkuru_y’u_Rwanda.mw
@@ -1,13 +1,10 @@
 '''Kaminuza nkuru y`u Rwanda''' ('''NUR'''; izina mu [[gifaransa]]: '''Université nationale du Rwanda''') niyo Kaminuza nini mu [[Rwanda]]. Ibarizwa kuri 2° 36′ 58″ S, 29° 44′ 34″ E mu mujyi wa [[Butare]].
-
-<!--aya makuru ashobora kuvugururwa-->
-
-'''Ibiri kuri iyi paji''' ([[hisha]]). <!--aya makuru ashobora kuvugururwa-->
+ 
 
 == Amateka ==
 Ikimara gushingwa, iyi kaminuza yatangiranye [[amashami]] (''facultés'') atatu gusa, ari yo: Ishami ry’ubuganga; Ishami rijyanye n’ubumenyi bw’umuryango (''sciences sociales'') n’Ishami nderabarezi (''teacher training college''). Yatangiranye kandi abanyeshuli 51 n’abarimu 16.  
 
-Muri [[jenoside yakorewe Abatutsi yo muw’1994]], iyi kaminuza yaguyemo inzirakarengane nyinshi ndetse ikurizamo no gufunga, ifungura mu mwaka w’1995. Ikimara gufungura, ururimi rw’uburezi rwahise ruba [[icyongereza]], kigakoreshwa hamwe n’[[igifaransa]]. 
+Muri [[Itsembabwoko ry’u Rwanda ry’1994|jenoside yakorewe Abatutsi yo muw’1994]], iyi kaminuza yaguyemo inzirakarengane nyinshi ndetse ikurizamo no gufunga, ifungura mu mwaka w’1995. Ikimara gufungura, ururimi rw’uburezi rwahise ruba [[icyongereza]], kigakoreshwa hamwe n’[[igifaransa]]. 
 
 Mu mwaka w’2005, uburere bwatangwaga muri kaminuza bwibanze ku bumenyi-ngiro (''science'') n’ikoranabuhanga, ndetse n’ubumenyamuntu (''humanities''), bikigishwa mu rurimi rw’igifaransa n’icyongereza.   Guhera mu mwaka w’2005, abanyeshuli bigaga muri iyi kaminuza babarirwaga kuri 8221, naho abarimu bakaba 425. 
 
