--- a/Kaminuza_nkuru_y’u_Rwanda.mw
+++ b/Kaminuza_nkuru_y’u_Rwanda.mw
@@ -40,8 +40,17 @@ Dore amatariki y’ingirakamaro n’ibikorwa byabayeho muri kaminuza y’u Rwand
 <!--aya makuru ashobora kuvugururwa-->
 
 == Amashami ==
+Kaminuza y’u Rwanda ifite amashami 9, ari yo:
 
-<!--aya makuru ashobora kuvugururwa-->
+# Ishami ry’ubuganga (''medicine'')
+# Ishami ry’ubuhinzi n’ubworozi (''agriculture'')
+# Ishami ry’indimi, itangazamakuru n’ubumenyamuntu
+# Ishami ry’ubumenyi-ngiro
+# Ishami ry’amategeko
+# Ishami ry’ubumenyi
+# Ishami ry’ubukungu n’icungamari
+# Ishami ry’indimi ritegura abanyeshuli (''Foundation Language Skills'') 
+# Ishuli ry’ubuzima (''Public Health'')
 
 [[Category:Uburezi]] 
 [[Category:Rwanda]] 
