--- a/Kaminuza_nkuru_y’u_Rwanda.mw
+++ b/Kaminuza_nkuru_y’u_Rwanda.mw
@@ -1,4 +1,4 @@
-'''Kaminuza nkuru y’u Rwanda''' ('''NUR'''; izina mu [[gifaransa]]: '''Université nationale du Rwanda''') niyo Kaminuza nini mu [[Rwanda]]. Ibarizwa kuri 2° 36′ 58″ S, 29° 44′ 34″ E mu mujyi wa [[Butare]].
+'''Kaminuza nkuru y’u Rwanda''' ('''NUR''' cyangwa '''UNR''' ; izina mu [[gifaransa]]: ''Université nationale du Rwanda'') ni yo Kaminuza nini mu [[Rwanda]]. Ibarizwa kuri 2° 36′ 58″ S, 29° 44′ 34″ E mu mujyi wa [[Butare]]. Yashinzwe mu mwaka w’1963, ishingwa na guverinoma y’u Rwanda ku bufatanye n’abakristu b’abadominikani bo mu mujyi wa [[Quebec]] mu gihugu cya [[Kanada]].
  
 
 == Amateka ==
