*Empty MediaWiki Message*

--- a/Kaminuza_nkuru_y’u_Rwanda.mw
+++ b/Kaminuza_nkuru_y’u_Rwanda.mw
@@ -1,4 +1,4 @@
-'''Kaminuza nkuru y’u Rwanda''' ('''NUR''' cyangwa '''UNR''' ; izina mu [[gifaransa]]: ''Université nationale du Rwanda'') ni yo Kaminuza nini mu [[Rwanda]]. Ibarizwa kuri 2° 36′ 58″ S, 29° 44′ 34″ E mu mujyi wa [[Butare]]. Yashinzwe mu mwaka w’1963, ishingwa na guverinoma y’u Rwanda ku bufatanye n’abakristu b’abadominikani bo mu mujyi wa [[Quebec]] mu gihugu cya [[Kanada]].
+'''Kaminuza nkuru y’u Rwanda''' ('''NUR''' mu magambo ahinnye y’[[icyongereza]]; cyangwa '''UNR''' mu magambo ahinnye y’[[igifaransa]]; izina mu gifaransa: ''Université nationale du Rwanda'' ; izina mu cyongereza : ''National University of Rwanda'') ni yo Kaminuza nini mu [[Rwanda]]. Ibarizwa kuri 2° 36′ 58″ S, 29° 44′ 34″ E mu mujyi wa [[Butare]]. Yashinzwe mu mwaka w’1963, ishingwa na guverinoma y’u Rwanda ku bufatanye n’abakristu b’abadominikani bo mu mujyi wa [[Quebec]] mu gihugu cya [[Kanada]].
  
 
 == Amateka ==
@@ -55,7 +55,7 @@ Kaminuza y’u Rwanda ifite amashami 9, ari yo:
 [[Category:Uburezi]] 
 [[Category:Rwanda]] 
 
+[[en:National University of Rwanda]]
+[[fi:Ruandan kansallinen yliopisto]]
 [[fr:Université nationale du Rwanda]]
 [[ja:ルワンダ国立大学]]
-[[fi:Ruandan kansallinen yliopisto]]
-[[en:National University of Rwanda]]
