--- a/Alexandre_Kimenyi.mw
+++ b/Alexandre_Kimenyi.mw
@@ -1,5 +1,7 @@
 Dr. '''Alexandre Kimenyi''' [[avuka]] i [[Rwanda]]. Ni umwe mu bagize amahirwe yo kwiga amashuri makuru mu gihe cye. Mu mwaka w’1971 nibwo yagiye kwiga muri [[Leta Zunze Ubumwe za Amerika]]. Ntiyabashije kugaruka mu Rwanda, bityo n’abo yahasize ntibongeye guhura nawe ukundi, benshi muri bo bahitanywe na Jenoside. Yaje kubona ubwenegihugu bwa Amerika, akomerezayo imirimo ye nk’umwarimu w’indimi n’Ubuvanganzo.
 
+== Imiyoboro ==
+*[http://www.igihe.com/news-3-3-5411.html Uwo mudahuje ibitekerezo si umwanzi, mutege ugutwi- Umurage dusigiwe na Prof KIMENYI]
 
 [[Category:Abanyepolitiki]] 
 [[Category:Abanyarwanda]]
