*Empty MediaWiki Message*

--- a/Burezile.mw
+++ b/Burezile.mw
@@ -3,6 +3,7 @@
 
 '''Burezile''' (izina mu [[giporutigali]] : ''República Federativa do Brasil'' ) n’[[igihugu]] muri [[Amerika]].
 
+[[Category:Burezile]]
 [[Category:Amerika]]
 [[Category:Ibihugu]]
 
