--- a/Osasco.mw
+++ b/Osasco.mw
@@ -12,7 +12,8 @@
 * http://www.osascobrazil.com 
 * [http://commons.wikimedia.org/wiki/Category:Osasco Commons:Osasco]
 
-[[Category:Amerika]]
+[[Category:Burezile]]
+
 [[ab:Озаску]]
 [[ace:Osasco]]
 [[af:Osasco]]
