*Empty MediaWiki Message*

--- a/Perezidansi_y’Amerika.mw
+++ b/Perezidansi_y’Amerika.mw
@@ -1,6 +1,6 @@
 [[File:White House.jpg|thumb|250px|<font color="grey">Perezidansi y’Amerika</font>]]
 
-'''Perezidansi y’Amerika''' cyangwa '''Perezidansi ya Leta Zunze Ubumwe z’Amerika''' (izina mu [[Cyongereza]]: ''White House'' )
+'''Perezidansi y’Amerika''' cyangwa '''Perezidansi ya Leta Zunze Ubumwe z’Amerika''' (izina mu [[cyongereza]]: ''White House'' )
 
 Iyo nzu mwumva bita “White House”, tugenekereje mu kinyarwanda ni ukuvuga Ingoro y’umweru. Ni ingoro irimo ibiro n’ahantu ubaye Perezida wese wa [[Leta Zunze Ubumwe za Amerika]] (USA) agomba gukorera akanaturamo we n’umuryango we. Iriya ngoro iri mu mujyi wa Washington DC (''District of Columbia'') irimo n’ibiro by’abandi bakozi bakora muri Perezidansi, ibibuga, ubusitani, pisine, aho barebera amacinamico, amafirimi n’ibindi byiza byinshi. Ku isi yose babona iyo ngoro nk’ikimenyetso gikomeye cy’ubutegetsi bwa USA n’igitinyiro cy’igihugu urebye ukuntu umutekano wayo ucunzwe dore ko hari impuguke zivuga ko hari ibyogajuru bikora gusa akazi ko gucunga umutekano wayo. 
 
