*Empty MediaWiki Message*

--- a/Osasco.mw
+++ b/Osasco.mw
@@ -3,7 +3,7 @@
 
 
 
-'''Osasco''' [''O'zascu''] ni umujyi w'u [[Burezile]].
+'''Osasco''' [''O'zascu''] ni [[umujyi]] w’u [[Burezile]].
 
 == Links ==
 
