--- a/Afurika_y’Epfo.mw
+++ b/Afurika_y’Epfo.mw
@@ -16,6 +16,7 @@
 :izina mu [[kivenda]] : '''Riphabuḽiki ya Afurika Tshipembe''' 
 :izina mu [[gitsonga]] : '''Riphabliki ra Afrika Dzonga'''
 
+[[Category:Afurika y’Epfo]]
 [[Category:Afurika]]
 [[Category:Ibihugu]]
 
