*Empty MediaWiki Message*

--- a/ISO_4217.mw
+++ b/ISO_4217.mw
@@ -596,7 +596,7 @@
 *UGW Ishilingi Rishaje rya Yuganda  (Uganda Old Schilling)
 *VNC Idongi Rishaje ya Viyetinamu  (Viet Nam Old Dong)
 
-[[Category:Ubukungu]]
+[[Category:Amafaranga]]
 
 [[af:ISO 4217]]
 [[ar:أيزو 4217]]
