*Empty MediaWiki Message*

--- a/Idenari.mw
+++ b/Idenari.mw
@@ -1,4 +1,5 @@
 [[File:Dinar.svg|thumb|250px|<font color="grey">Ikarita y’Idenari</font>]]
+[[File:5 TND obverse.jpg|thumb|250px|<font color="grey">Idenari rya Tunisiya</font>]]
 
 '''Idenari'''
 
