*Empty MediaWiki Message*

--- a/Idenari.mw
+++ b/Idenari.mw
@@ -25,3 +25,37 @@
 |}
 
 [[Category:Amafaranga]]
+
+[[ar:دينار]]
+[[ast:Dinar]]
+[[az:Dinar]]
+[[bs:Dinar]]
+[[ca:Dinar]]
+[[cs:Dinár]]
+[[da:Dinar]]
+[[de:Dinar]]
+[[es:Dinar]]
+[[eo:Dinaro]]
+[[fa:دینار]]
+[[fr:Dinar]]
+[[ko:디나르]]
+[[hr:Dinar]]
+[[id:Dinar]]
+[[he:דינר]]
+[[ku:Dînar (dirav)]]
+[[mr:दिनार]]
+[[ms:Dinar]]
+[[nl:Dinar (munt)]]
+[[ja:ディナール]]
+[[no:Dinar]]
+[[pl:Dinar]]
+[[pt:Dinar]]
+[[ru:Динар]]
+[[simple:Dinar]]
+[[sk:Dinár]]
+[[sr:Историја динара]]
+[[fi:Dinaari]]
+[[sv:Dinar]]
+[[tr:Dinar (para)]]
+[[ur:دینار]]
+[[zh:第納爾]]
