*Empty MediaWiki Message*

--- a/Idolari.mw
+++ b/Idolari.mw
@@ -59,3 +59,64 @@
 
 
 [[Category:Amafaranga]]
+
+[[af:Dollar]]
+[[ar:دولار]]
+[[bs:Dolar]]
+[[br:Dollar]]
+[[bg:Долар]]
+[[ca:Dòlar]]
+[[cs:Dolar]]
+[[da:Dollar]]
+[[de:Dollar]]
+[[et:Dollar]]
+[[es:Dólar]]
+[[eo:Dolaro (monunuo)]]
+[[fa:دلار]]
+[[fr:Dollar]]
+[[fy:Dollar]]
+[[gd:Dolar]]
+[[ko:달러]]
+[[hy:Դոլար]]
+[[hr:Dolar]]
+[[id:Dolar]]
+[[is:Dalur (gjaldmiðill)]]
+[[it:Dollaro]]
+[[he:דולר]]
+[[kn:ಡಾಲರ್]]
+[[krc:Доллар]]
+[[sw:Dola (pesa)]]
+[[la:Dollarium]]
+[[lb:Dollar]]
+[[lt:Doleris]]
+[[ln:Dollar]]
+[[ml:ഡോളർ]]
+[[mr:डॉलर]]
+[[nl:Dollar (munt)]]
+[[ja:ドル]]
+[[no:Dollar]]
+[[nn:Dollar]]
+[[nds:Dollar]]
+[[pl:Dolar]]
+[[ro:Dolar]]
+[[ru:Доллар]]
+[[sah:Доллар]]
+[[sq:Dollari]]
+[[scn:Dollaru]]
+[[simple:Dollar]]
+[[sk:Dolár]]
+[[so:Dollar]]
+[[fi:Dollari]]
+[[sv:Dollar]]
+[[tl:Dolyar]]
+[[ta:டாலர்]]
+[[tt:Доллар]]
+[[th:ดอลลาร์]]
+[[tr:Dolar]]
+[[uk:Долар]]
+[[ur:ڈالر]]
+[[vi:Đô la]]
+[[yi:דאלאר]]
+[[yo:Dọ́là]]
+[[zh-yue:圓 (銀)]]
+[[zh:元 (貨幣)]]
