*Empty MediaWiki Message*

--- a/Iriyali.mw
+++ b/Iriyali.mw
@@ -1,4 +1,4 @@
-[[File:100000 IRR complete.jpg|thumb|250px|<font color="grey">Iriyali ry’Irani</font>]]
+[[File:Yemeni rial.jpg|thumb|250px|<font color="grey">Iriyali rya Yemeni</font>]]
 
 '''Iriyali'''
 
