*Empty MediaWiki Message*

--- a/Iriyali.mw
+++ b/Iriyali.mw
@@ -1,4 +1,4 @@
-[[File:Yemeni rial.jpg|thumb|250px|<font color="grey">Iriyali rya Yemeni</font>]]
+[[File:Rial Sign.PNG|thumb|250px|<font color="grey">Iriyali mu cyarabu</font>]]
 
 '''Iriyali'''
 
