*Empty MediaWiki Message*

--- a/Afuganisitani.mw
+++ b/Afuganisitani.mw
@@ -3,6 +3,8 @@
 
 '''Afuganisitani''' (izina mu [[gipushito]] : '''افغانستان''' ) cyangwa '''Repebulika y’Ubuyisilamu ya Afuganisitani''' (izina mu gipushito : '''د افغانستان اسلامي جمهوریت''' ) n’[[igihugu]] muri [[Aziya]]. [[Umurwa]] mukuru w’Afuganisitani witwa [[Kabul]].
 
+
+[[Category:Afuganisitani]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
