*Empty MediaWiki Message*

--- a/Umusigiti_wa_Lakemba.mw
+++ b/Umusigiti_wa_Lakemba.mw
@@ -1,4 +1,4 @@
-'''Umusigiti wa Lakemba''' (izina mu [[cyarabu]] : ''Lakemba Mosque'') ni [[umusigiti]] i [[Lakemba]] muri [[Ositaraliya]].
+'''Umusigiti wa Lakemba''' (izina mu [[cyongereza]] : ''Lakemba Mosque'') ni [[umusigiti]] i [[Lakemba]] muri [[Ositaraliya]].
 
 [[Category:Imisigiti]]
 [[Category:Ositaraliya]]
