*Empty MediaWiki Message*

--- a/Bahirayini.mw
+++ b/Bahirayini.mw
@@ -3,6 +3,7 @@
 
 '''Bahirayini''' (izina mu [[cyarabu]] : '''مملكة البحرين‎''' ) n’[[igihugu]] muri [[Aziya]].
 
+[[Category:Bahirayini]]
 [[Category:Aziya]]
 [[Category:Ibihugu]]
 
